[package]
name = "realtime-wasm-raytracer"
version = "0.1.0"
edition = "2021"
description = "A compact real-time ray tracer compiled to WebAssembly."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.126"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
